# openauto

./: .gitignore  CMakeLists.txt  Readme.md  crosscompile.Dockerfile  rpilog.md  run_autoapp.sh  swc.cpp
.devcontainer/: Dockerfile  devcontainer.json
aasdk/: CMakeLists.txt
aasdk/Messenger/: ChannelId.cpp
aasdk/Transport/: SSLWrapper.cpp
aasdk_proto/: CMakeLists.txt  NetworkInfo.proto  SocketInfoRequest.proto  SocketInfoResponse.proto
autoapp/: CMakeLists.txt  autoapp.cpp
autoapp/Pages/: HomePage.cpp  HomePage.hpp  HomePage.ui  ProjectionPage.cpp  ProjectionPage.hpp  ProjectionPage.ui
autoapp/Service/: Alsa.cpp  Alsa.hpp  KeyReceiver.cpp  KeyReceiver.hpp  OpenautoEventFilter.cpp  OpenautoEventFilter.hpp  SteeringWheelControl.cpp  SteeringWheelControl.hpp
autoapp/assets/: aa_video.qml  resources.qrc
cmake_modules/: Findaasdk.cmake
docs/: Readme.md  macropad.md  setup.md  swc.md
docs/assets/: falstad.txt
extra_protos/: CMakeLists.txt  NetworkInfo.proto  SocketInfoRequest.proto  SocketInfoResponse.proto
include/aasdk/Messenger/: ChannelId.hpp
include/openauto/: App.hpp
include/openauto/Configuration/: AudioOutputBackendType.hpp  Configuration.hpp
include/openauto/Projection/: IInputDevice.hpp  InputDevice.hpp  QtAudioOutput.hpp  QtVideoOutput.hpp  VideoOutput.hpp
include/openauto/Service/: AndroidAutoEntity.hpp  AndroidAutoEntityFactory.hpp  AppEvent.hpp  BluetoothAdvertiseService.hpp  Pinger.hpp  ServiceFactory.hpp
openauto/: App.cpp  CMakeLists.txt
openauto/Configuration/: Configuration.cpp
openauto/Projection/: InputDevice.cpp  QtAudioOutput.cpp  QtVideoOutput.cpp  VideoOutput.cpp
openauto/Service/: AndroidAutoEntity.cpp  AndroidAutoEntityFactory.cpp  AppEvent.cpp  BluetoothAdvertiseService.cpp  InputService.cpp  MediaStatusService.cpp  Pinger.cpp  SensorService.cpp  ServiceFactory.cpp  VideoService.cpp
setup/: Readme.md  swc.md
setup/assets/: swc.fzz
swc/: _utils.py  swc.py
tooling/: README.md  crosscompile.Dockerfile  crosscompile.ps1  openauto.Pifile  pimod.ps1  scratchpad.md  setup_crosscompile.sh  setup_deps.sh  setup_runtime.sh
